--- a/main.html
+++ b/main.html
@@ -10,17 +10,26 @@
 </head>
 <body>
 
+	<div class="instruct">
+		<h1> Click on Ryu to Fire</h1>
+		<h1> Press "X" to have him strike a cool pose</h1>
+	</div>	
+
+
 	<div class="main">
 			<div class="ryu">
 				<div class="ryu-still"></div>
 				<div class="ryu-ready"></div>
 				<div class="ryu-throwing"></div>
+				<div class="ryu-cool"></div> 
 			</div>
 	
 			<div class="hadouken"></div>
 
-
 	</div>
+
+	
+	
 	<audio id="hadouken-sound" src="sound/hadouken.mp3">
 
 </body>
